<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background= "#050002"
    android:orientation="vertical" >

<ImageView
android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="3"
        android:src="@drawable/chad_daddy" /> 
   
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_weight="2" >

	<TableLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_horizontal"
	    android:shrinkColumns="*">

	    <TableRow
	        android:id="@+id/tableRow1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:gravity="center_horizontal" >

			<Button
	            android:id="@+id/button1"
	            android:background="@drawable/roundedbutton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:alpha="0.5"
	            android:layout_margin="10dp"
	            android:typeface="sans"
	            android:text="@string/abap" />
	
	        <Button
	            android:id="@+id/button2"
	            android:background="@drawable/roundedbutton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:alpha="0.5"
	            android:layout_margin="10dp"
	            android:typeface="sans"
	            android:text="@string/ballin" />
	
	        <Button
	            android:id="@+id/button3"
	            android:background="@drawable/roundedbutton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:alpha="0.5"
	            android:layout_margin="10dp"
	            android:typeface="sans"
	            android:text="@string/three" />
	    </TableRow>

	    <TableRow
	        android:id="@+id/tableRow2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:gravity="center_horizontal" >

	        <Button
	            android:id="@+id/button4"
	            android:background="@drawable/roundedbutton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:alpha="0.5"
	            android:layout_margin="10dp"
	            android:typeface="sans"
	            android:text="@string/supBitches" />
	
	        <Button
	            android:id="@+id/button5"
	            android:background="@drawable/roundedbutton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:alpha="0.5"
	            android:layout_margin="10dp"
	            android:typeface="sans"
	            android:text="@string/cwiz" />
	
	
	        <Button
	            android:id="@+id/button6"
	            android:background="@drawable/roundedbutton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:alpha="0.5"
	            android:layout_margin="10dp"
	            android:typeface="sans"
	            android:text="@string/cDaddy" />
	    </TableRow>

	    <TableRow
	        android:id="@+id/tableRow3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:gravity="center_horizontal" >

			<Button
	            android:id="@+id/button7"
	            android:background="@drawable/roundedbutton"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:alpha="0.5"
	            android:layout_margin="10dp"
	            android:typeface="sans"
	            android:text="@string/seven" />
	
	        <Button
	            android:id="@+id/button8"
	            android:background="@drawable/roundedbutton"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:alpha="0.5"
	            android:layout_margin="10dp"
	            android:typeface="sans"
	            android:text="@string/bPapi" />
	
	
	        <Button
	            android:id="@+id/button9"
	            android:background="@drawable/roundedbutton"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:alpha="0.5"
	            android:layout_margin="10dp"
	            android:typeface="sans"
	            android:text="@string/dildo" />
	    </TableRow>

	    <TableRow
	        android:id="@+id/tableRow4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:gravity="center_horizontal" >

	        <Button
	            android:id="@+id/button10"
	            android:background="@drawable/roundedbutton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:alpha="0.5"
	            android:layout_margin="10dp"
	            android:typeface="sans"
	            android:text="@string/link_sound" />
	
	        <Button
	            android:id="@+id/button11"
	            android:background="@drawable/roundedbutton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:alpha="0.5"
	            android:layout_margin="10dp"
	            android:typeface="sans"
	            android:text="@string/pstripple" />
	        
	         <Button
	            android:id="@+id/button12"
	            android:background="@drawable/roundedbutton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:alpha="0.5"
	            android:layout_margin="10dp"
	            android:typeface="sans"
	            android:text="@string/slickblack" />
	    </TableRow>

	    <TableRow
	        android:id="@+id/tableRow5"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:gravity="center_horizontal" >

	         <Button
	            android:id="@+id/button13"
	            android:background="@drawable/roundedbutton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:alpha="0.5"
	            android:layout_margin="10dp"
	            android:typeface="sans"
	            android:text="@string/acetown" />
	                        
	         <Button
	            android:id="@+id/button14"
	            android:background="@drawable/roundedbutton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:alpha="0.5"
	            android:layout_margin="10dp"
	            android:typeface="sans"
	            android:text="@string/shouldCopy" />
	                         
	         <Button
	            android:id="@+id/button15"
	            android:background="@drawable/roundedbutton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:alpha="0.5"
	            android:layout_margin="10dp"
	            android:typeface="sans"
	            android:text="@string/GoW" />
	    </TableRow>

		<TableRow
		    android:id="@+id/tableRow6"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_horizontal"
		    android:gravity="center_horizontal" >

			<Button
	            android:id="@+id/button16"
	            android:background="@drawable/roundedbutton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:alpha="0.5"
	            android:layout_margin="10dp"
	            android:typeface="sans"
	            android:text="@string/geom" />
	                        
	                         
	         <Button
	            android:id="@+id/button17"
	            android:background="@drawable/roundedbutton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:alpha="0.5"
	            android:layout_margin="10dp"
	            android:typeface="sans"
	            android:text="@string/itNew" />
	                        
	                         
	         <Button
	            android:id="@+id/button18"
	            android:background="@drawable/roundedbutton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:alpha="0.5"
	            android:layout_margin="10dp"
	            android:typeface="sans"
	            android:text="@string/notBallin" />
		</TableRow>

		<TableRow
		    android:id="@+id/tableRow7"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_horizontal"
		    android:gravity="center_horizontal" >

			<Button
	            android:id="@+id/button19"
	            android:background="@drawable/roundedbutton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:alpha="0.5"
	            android:layout_margin="10dp"
	            android:typeface="sans"
	            android:text="@string/migra" />
	                         
	         <Button
	            android:id="@+id/button20"
	            android:background="@drawable/roundedbutton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:alpha="0.5"
	            android:layout_margin="10dp"
	            android:typeface="sans"
	            android:text="@string/wario" />
	                        
	                         
	         <Button
	            android:id="@+id/button21"
	            android:background="@drawable/roundedbutton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:alpha="0.5"
	            android:layout_margin="10dp"
	            android:typeface="sans"
	            android:text="@string/smash" />
	    </TableRow>

		<TableRow
		    android:id="@+id/tableRow8"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_horizontal"
		    android:gravity="center_horizontal" >

			<Button
	            android:id="@+id/button22"
	            android:background="@drawable/roundedbutton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:alpha="0.5"
	            android:layout_margin="10dp"
	            android:typeface="sans"
	            android:text="@string/toad" />
			
			<Button
	            android:id="@+id/button23"
	            android:background="@drawable/roundedbutton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:alpha="0.5"
	            android:layout_margin="10dp"
	            android:typeface="sans"
	            android:text="@string/figment" />
			
			<Button
	            android:id="@+id/button24"
	            android:background="@drawable/roundedbutton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:alpha="0.5"
	            android:layout_margin="10dp"
	            android:typeface="sans"
	            android:text="@string/wrong" />
		</TableRow>
	</TableLayout>
</ScrollView>
</LinearLayout>